k8s/cs-portal-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cs-portal-deployment
spec:
  selector:
    matchLabels:
      component: cs-portal
  replicas: 1
  template:
    metadata:
      labels:
        component: cs-portal
    spec:
      containers:
        - name: cs-portal
          image: 077003688714.dkr.ecr.us-east-1.amazonaws.com/cs_portal:latest
          ports:
            - containerPort: 8081
      imagePullSecrets:
        - name: awsecr-cred
