k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  selector:
    matchLabels:
      component: server
  replicas: 1
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: mphclub-api
          image: 077003688714.dkr.ecr.us-east-1.amazonaws.com/mphclub_api:latest
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: awsecr-cred
