k8s/cs-dashboard-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cs-dashboard-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: cs-dashboard
  ports:
    - port: 3000
      name: cs-dashboard
