k8s/cs-portal-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cs-portal-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: cs-portal
  ports:
    - port: 8081
      name: cs-portal
